<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="school.cactus.succulentshop.signup.SignupViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signup.SignupFragment"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldSignUpemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_email"
            error="@{viewModel.identifierErrorMessage}"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edttextSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.identifier}"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldSignUpusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_username"
            error="@{viewModel.usernameErrorMessage}"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edttextSignUpusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.username}"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldSignuppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            error="@{viewModel.passwordErrorMessage}"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edttextSignupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/sign_up"
            android:onClick="@{(view) -> viewModel.onSignupButtonClicked(view)}"
            />

        <Button
            android:id="@+id/alreadyHaveAccountButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/create_an_account"
            android:text="@string/already_have_an_account"
            android:onClick="@{() -> viewModel.haveAnAccountBtnClicked()}"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
    </LinearLayout>
</layout>
